<resources>
    <string name="app_name" translatable="false">EnQ</string>
    <string name="nav_queue" translatable="false">Q</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="lbl_album_art">Album Art</string>
    <string name="tlt_login">Login</string>
    <string name="msg_login">Please provide a username and password (omit password to login as guest)</string>
    <string name="btn_login">Login</string>
    <string name="tlt_no_server">Server not found</string>
    <string name="btn_retry">Retry</string>
    <string name="msg_server_found">Server found</string>
    <string name="tlt_server_discovery">Discovering Server…</string>
    <string name="tlt_logging_in">Logging in…</string>
    <string name="msg_logged_in">Logged in successfully as %1$s</string>
    <string name="msg_username_taken">This username is already taken</string>
    <string name="lbl_username">Username:</string>
    <string name="txt_username">Username: %1$s</string>
    <string name="lbl_password">Password:</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_set_password">Set Password</string>
    <string name="msg_password_wrong">Wrong password or username</string>
    <string name="msg_inavlid_password">Invalid password</string>
    <string name="msg_nothing_playing">Nothing is playing at the moment</string>
    <string name="msg_queue_smth">EnQ something!</string>
    <string name="nav_suggestions">Suggestions</string>
    <string name="txt_suggested">
        <i>Suggested</i>
    </string>
    <string name="msg_removed_from_favs">Removed %1$s from favorites</string>
    <string name="msg_no_permission">You can\'t do that</string>
    <string name="msg_added_to_favs">Added %1$s to favorites</string>
    <string name="msg_enqueued" translatable="false">EnQd %1$s</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_user_options">User</string>
    <string name="hint_search">Search for a song</string>
    <string name="lbl_search">Search</string>
    <string name="nav_about">About</string>
    <string name="msg_unknown_error">An unknown error occurred</string>
    <string name="msg_server_error">Unknown Server Error</string>
    <string name="desc_avatar">Avatar</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_delete_user">Delete User</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_reload_permissons">Reload Permissions</string>
    <string name="hint_password">Password</string>
    <string name="msg_password_changed">Password was successfully changed</string>
    <string name="msg_function_unsupported">This function is currently not supported by the server</string>
    <string name="msg_set_password_needed">You need so set a password first</string>
    <string name="msg_error_password_change">Error changing the password</string>
    <string name="msg_permissions_reloaded">Permissions successfully reloaded</string>
    <string name="msg_provider_not_found">Provider was not found, searchin song on existing providers</string>
    <string name="lbl_permissions">Permissions:</string>
    <string name="txt_app_description" translatable="false">Open <a href="https://github.com/IIIuminator/EnQ">Source</a> client
        for
        <a href="https://github.com/BjoernPetersen/MusicBot">JMusicBot</a>
    </string>
    <string name="txt_developed_by">Developed by Ivo Berger</string>
</resources>
