<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/aboutIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/aboutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Enq.Headline4" />

    <TextView
        android:id="@+id/aboutVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Enq.Subtitle1"
        tools:text="Version" />

    <TextView
        android:id="@+id/txt_about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:linksClickable="true"
        android:padding="8dp"
        android:text="@string/txt_app_description"
        android:textAppearance="@style/TextAppearance.Enq.Body1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/txt_developed_by"
        android:textAppearance="@style/TextAppearance.Enq.Body1" />
</LinearLayout>
